
Changes after 1.0:
-----------------------------

New features:
       - add "Save link as" to context menus -fo
       
Changes:
       - Changed prev/next unread article actions to cycle through all unread articles -fo	
       - The article archive is now configurable, using metakit implementation as default.
         This increases startup speed and reduces memory usage significantly -fo
       
Bug fixes:

	- Respect markImmediatelyAsRead setting when updating articles (#103502) -fo
	- make "fetch feeds on startup" option work again (#102085) -fo
	- Fix favicons, load them on startup (#94888) -fo
	- make BrowserRun delete itself when the Viewer gets destroyed (#101413) -tpr
        - tolerate leading and trailing whitespace in the Add Feed Dialog (#101988) -fo
        - fixed confusion of "disable archiving" and expiry by age (#101907) -fo
        - show open|save|cancel dialog for non-html links (101274) -fo
	- make forms work again (regression) (#94964) -fo
	- fix notification when running as kontact plugin -fo


Changes after 1.0b9:
-----------------------------

Bug fixes:
       - fixed printing of articles (no infinite number of pages anymore) -fo

Changes after 1.0b8:
-----------------------------

New features:
       - Make fonts configurable, added zoom in/out actions -fo
       - Use KNotify for notification -fo
       - Make caching configurable -fo
       - Forms work in the internal browser -gs
       - Enable sorting in article list -gs
       - Add possibility to delete article -fo
       - Allow bookmarking articles in global bookmarks -gs

Changes:     
       - Added new about page, designed by Lokheed, lokheed at gmail.com -fo
       - Use KDEPIM's progressbar -tpr
       - Update unread count when stopping fetching before it's finished -tpr
       - Added "Keep flag set" to the search combobox -fo
       - Added optional close buttons on browser tabs -fo
       - Prevent unreachable feeds from blocking the fetching process (timeout) -fo
